@@ -10,6 +10,7 @@ Bug Fixes:
   - Update version of Restlet library used (fixed bug in Restlet thread management, ORCJAVA-476)
   - Add more logging information on connection failure
     when retrieving controller identity (ORCJAVA-459)
+  - Fixed: Issue parsing empty strings in status values by Vera protocol (ORCJAVA-489)
 
 Controller Pro 1.1.0
 ====================
